Fixed logo alignment and display.

--- a/assets/stylesheets/components/_header.scss
+++ b/assets/stylesheets/components/_header.scss
@@ -77,8 +77,12 @@
   }
 }
 
+.custom-logo-link {
+  display: inline-block;
+  margin-top: 10px;
+}
+
 .custom-logo {
-  margin-top: -5px;
   max-height: 65px;
   padding: 10px 10px 10px 20px;
   vertical-align: middle;
@@ -94,7 +98,12 @@
   padding: 20px;
 
   .custom-logo-link:not([style="display:none;"]) + & {
+    display: none;
     padding-left: 0;
+
+    @include min-width($breakpoint__tablet-portrait) {
+      display: inline-block;
+    }
   }
 
   a {
